--- a/src/assets/scss/css.css
+++ b/src/assets/scss/css.css
@@ -86,7 +86,12 @@ a {
   margin: auto 0;
   padding: 0.35rem 0.5rem !important;
 }
-
+.home-btn:hover {
+  color: #212529 !important;
+  border: 1px solid #212529;
+  box-shadow: 0 0 7px #212529;
+  text-shadow: none;
+}
 .devider {
   border: 1px solid #206b80;
   box-shadow: 1px 3px 6px #206b80;
@@ -96,18 +101,22 @@ a {
   margin-right: 10px;
 }
 
-.home-btn:hover {
-  color: #212529 !important;
-  border: 1px solid #212529;
-  box-shadow: 0 0 7px #212529;
-  text-shadow: none;
+.sheet {
+  border-radius: 3px;
+  /*padding: 15px;*/
+  margin-bottom: 20px;
+  background-color: #fffff4;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  font-family: "Courgette";
 }
 
-.sheet-container {
-  position: relative;
-  min-width: max-content;
-}
 
+.controls-box {
+  width: max-content;
+  text-align: center;
+  margin: auto;
+  display: flex;
+}
 .controls {
   position: fixed;
   display: flex;
@@ -116,37 +125,14 @@ a {
   width: 100%;
   padding: 2px;
   background: linear-gradient(
-    130deg,
-    rgba(136, 238, 195, 1) 0%,
-    rgba(12, 81, 115, 1) 100%
+          130deg,
+          rgba(136, 238, 195, 1) 0%,
+          rgba(12, 81, 115, 1) 100%
   );
   box-shadow: 0px 0px 7px gray;
   top: 0;
   left: 0;
 }
-
-.sheet-wrapper {
-  width: max-content;
-  margin: auto;
-  min-height: 100vh;
-}
-
-.controls-box {
-  width: max-content;
-  text-align: center;
-  margin: auto;
-  display: flex;
-}
-
-.sheet {
-  background-color: #fffff4;
-  padding: 15px;
-  margin-bottom: 20px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-  font-family: "Courgette";
-}
-
 .titles h3 {
   margin-top: 0;
   margin-bottom: 0;
@@ -158,11 +144,21 @@ p {
 
 .lyrics {
   font-family: "Cousine", monospace;
-  font-size: 13px;
+  font-size: 14px;
   font-style: normal;
+  color: black;
   white-space: pre-wrap;
   width: max-content;
+  letter-spacing: -0.03rem;
+  line-height: 0.95rem;
+  margin-right: -7rem;
+  padding: 0;
+  resize: none;
 }
+.titles {
+  text-align: left;
+}
+
 
 textarea {
   resize: none;
@@ -172,18 +168,24 @@ textarea {
 .toast {
   max-width: 300px;
 }
-
-.titles {
-  text-align: left;
+.yt-iframe {
+  float: left;
+  margin-bottom: 10px;
+  display: none;
+  width: 100%;
+  height: 100px;
 }
 
-body {
-  font-family: "Courgette";
-  line-height: 1.2;
-  height: auto;
-  width: 100vw;
-  overflow-x: hidden;
+.yt-show {
+  display: block !important;
 }
+
+/*body {*/
+/*  line-height: 1.2;*/
+/*  height: auto;*/
+/*  width: 100vw;*/
+/*  overflow-x: hidden;*/
+/*}*/
 
 .theme-light {
   background-color: #f6f6f6;
@@ -201,15 +203,7 @@ body {
   background-color: #252525;
 }
 
-.yt-iframe {
-  float: left;
-  margin-bottom: 10px;
-  display: none;
-}
 
-.yt-show {
-  display: block !important;
-}
 
 li {
   text-decoration: none;
@@ -286,12 +280,12 @@ li {
   width: 100%;
 }
 
-input[type="password"] {
-  border: none !important;
-  border-bottom: 2px solid red !important;
-  padding: 5px;
-  width: 100px;
-}
+/*input[type="password"] {*/
+/*  border: none !important;*/
+/*  border-bottom: 2px solid red !important;*/
+/*  padding: 5px;*/
+/*  width: 100px;*/
+/*}*/
 
 .main-triggers button:hover {
   background-color: #206d30; /* Green */
