--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -11,4 +11,36 @@
   color: #fff;
 }
 
+.flying-button {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  display: grid;
+}
+.flying-button > span {
+  margin-left: auto;
+}
+
+#youtube {
+  width: 100%;
+  height: fit-content;
+}
+
+.collapse-item {
+  min-width: max-content;
+}
+
+.edit-form {
+  border: none !important;
+  border-bottom: 2px solid #207530 !important;
+  padding: 5px;
+}
+
+.edit-textarea {
+  background-color: #f8f9fc;
+  box-shadow: none;
+  border: none;
+  outline: none;
+}
+
 /*# sourceMappingURL=main.css.map */
