--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,3 +10,37 @@
 .sidebar-dark .nav-item .nav-link.active {
   color: #fff;
 }
+
+.flying-button {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  display: grid;
+  > span {
+    margin-left: auto;
+  }
+}
+
+#youtube {
+  width: 100%;
+  height: fit-content;
+}
+.collapse-item {
+  min-width: max-content;
+}
+
+
+.edit-form {
+  border: none !important;
+  border-bottom: 2px solid #207530 !important;
+  padding: 5px;
+}
+
+.edit-textarea {
+  //border-color: rgba(0,0,0,0.2) !important;
+
+  background-color: #f8f9fc;
+  box-shadow: none;
+  border: none;
+  outline: none;
+}
