--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -34,6 +34,7 @@
   border: none !important;
   border-bottom: 2px solid #207530 !important;
   padding: 5px;
+  background-color: rgba(0,0,0,0);
 }
 
 .edit-textarea {
@@ -43,4 +44,53 @@
   box-shadow: none;
   border: none;
   outline: none;
+  overflow: hidden !important;
+}
+.scroll {
+  max-height: 400px;
+  overflow: auto !important;
+}
+
+.row-overflow {
+  overflow-x: auto;
+  white-space: nowrap;
+  > div {
+    display: inline-block;
+    float: none;
+  }
+}
+
+.icon-hover:hover {
+  -webkit-text-stroke: 1px;
+}
+
+.icon-shadow {
+  text-shadow: 1px 1px 1px gray;
+}
+.icon-shadow:hover {
+  text-shadow: 1px 2px 1px gray;
+}
+.icon-trash-hover:hover {
+  color: #e74a3b !important;
+  cursor: pointer;
+}
+
+.video-button {
+  position: absolute;
+  margin-left: -1.7rem;
+  margin-top: 4.5rem;
+}
+.video-card {
+  position: fixed;
+  top: 0.2rem;
+  right: 0;
+  width: 16rem;
+  transition: width 100ms;
+  min-height: 120px;
+  background-color: black;
+}
+
+.recent-list {
+  overflow-x: auto;
+  max-height: 26rem;
 }
