--- a/src/assets/scss/css.css
+++ b/src/assets/scss/css.css
@@ -143,7 +143,7 @@ p {
 }
 
 .lyrics {
-  font-family: "Cousine", monospace;
+  font-family: monospace;
   font-style: normal;
   color: black;
   white-space: pre-wrap;
